@@ -3,7 +3,7 @@
 
 AC_PREREQ(2.53)
 
-AC_INIT([Open PRS],[1.1b6],[felix@laas.fr],[openprs])
+AC_INIT([Open PRS],[1.1b7],[felix@laas.fr],[openprs])
 AC_CONFIG_SRCDIR([src/oprs-main.c])
 AC_CONFIG_HEADERS([src/config-ac.h])
 AC_CONFIG_AUX_DIR([config])
